--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                               <div id="content-cras">
                                   <h3>The Conservatory of Recording Arts and Sciences|Gilbert,AZ|Fall 2011-Fall 2012</h3>
                                                     <ul>
-                                                    <li>Completed the Master Recording Programs I & II</li>
+                                                    <li>Completed the Master Recording Programs I and II</li>
                                                     </div>
                                                     
                                                     </div>
