--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                     <ul>
                                       <li>Prepare food for Customers according to store policies and ServSafe Specifications in a timely manner.</li>
                                       <li>Prepare backstock of food according to the Chef's prepwork requests</li>
-                                      <li>Work alone and manage myself and my time without supervision.</li>
+                                      <li>Work alone and manage the kitchen, myself, and my time without supervision.</li>
                                       <li>Open and close the kitchen making sure all my prep work and cleaning is in a tidy manner for the next day.</li>
                                   </div>
                                     <div id="content-rooster">
