--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-
+<html lang="eng">
   <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <title>My Prime Digital Academy Application Resume</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
