--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <h1>Blake Burbach</>
         <h2>769 Cottage Ave E</h2>
         <h2>St. Paul, MN 55106</h2>
-        <h2>701-400-5188</h2>
+      <h2>701-400-5188</h2>
       </div>
     </div>
-                               
+                               <img src="https://photos.app.goo.gl/N5ESDPmCEXYmIQ362/>
 <div id="content-academics"> <h2>Academics</h2>
                               <div id="content-high school">
                                   <h3>Bismarck High School | Bismarck, ND | Fall 2007-Spring 2010</h3>
