--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
                                <img class="thumbnail" src="https://photos.app.goo.gl/N5ESDPmCEXYmIQ362">
                                          
-<div id="content-academics"> <h3>Academics</h3>
+<h3 class="content-academics">Academics</h3>
                               <div id="content-high school">
                                   <h4>Bismarck High School | Bismarck, ND | Fall 2007-Spring 2010</h4>
                                      <ul>
@@ -31,7 +31,7 @@
                                                     <li>Completed the Master Recording Programs I and II</li>
                                                     </div>
                                 
-                                <div id="content-work history"> <h3>Work History</h3>
+                                <h3 class="content-work history">Work History</h3>
                                   <div id="content-bistro">
                                     <h4>The Finnish Bistro | Saint Paul, MN | Line Cook/Prep Cook | August 2017 - Present</h4>
                                     <ul>
