--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
+   <body bgcolor="#D3D3D3">
     <div id="container">
       <div id="content-contact">
         <h1>Blake Burbach</h1>
