--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      
     <div id="container">
                    <div id="content-contact">
-                    <a id="image" href='https://photos.google.com/share/AF1QipOIE_qyIgrFMtgJegoQ_m-ZCDyeFSh3p4mHrQpuPh6H0b_u0mXgIyyDzNedCGi-fQ?key=RTlyTERZRk04MDRfYmlMckJOamhKSkdZRl9fS2R3&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/X1Thp91y_zoMt_ALihcs48VhpO6GMhvto8PQbCITIfA0IB4J0XS0sUTlb88OCmAGdBc5Uq7RkeSWZiOea3z9XxuZaTY_97tioZBj6OTLghv9I165OeKlj8SXu9eEVhxCH6zm6931' /></a>">
+                    <a id="image" href='https://photos.google.com/share/AF1QipOIE_qyIgrFMtgJegoQ_m-ZCDyeFSh3p4mHrQpuPh6H0b_u0mXgIyyDzNedCGi-fQ?key=RTlyTERZRk04MDRfYmlMckJOamhKSkdZRl9fS2R3&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/X1Thp91y_zoMt_ALihcs48VhpO6GMhvto8PQbCITIfA0IB4J0XS0sUTlb88OCmAGdBc5Uq7RkeSWZiOea3z9XxuZaTY_97tioZBj6OTLghv9I165OeKlj8SXu9eEVhxCH6zm6931' /></a>
                     <h1>Blake Burbach</h1>
                     <h2>769 Cottage Ave E</h2>
                     <h2>St. Paul, MN 55106</h2>
