--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      
     <div id="container">
                    <div id="content-contact">
-                    <img id="image" src="[url=https://flic.kr/p/ZV6ikS][img]https://farm5.staticflickr.com/4559/38013143964_1d0380da15_n.jpg[/img][/url][url=https://flic.kr/p/ZV6ikS]BlakePhoto[/url] by [url=https://www.flickr.com/photos/154887584@N08/]Blake Burbach[/url], on Flickr">
+                    [url=https://flic.kr/p/ZV6ikS][img]https://farm5.staticflickr.com/4559/38013143964_1d0380da15_n.jpg[/img][/url][url=https://flic.kr/p/ZV6ikS]BlakePhoto[/url] by [url=https://www.flickr.com/photos/154887584@N08/]Blake Burbach[/url], on Flickr
                     <h1>Blake Burbach</h1>
                     <h2>769 Cottage Ave E</h2>
                     <h2>St. Paul, MN 55106</h2>
