--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                       <li>Open and close the kitchen making sure all my prep work and cleaning is in a tidy manner for the next day.</li>
                                   </div>
                                     <div id="content-rooster">
-                                      <h4>The Starving Rooster | Minot, ND | Assistant Kitchen Manager/Lead Prep Cook | August 2016 - July 2017</h4>
+                                      <h4>The Starving Rooster | Minot, ND | Assistant Kitchen Manager/Prep Cook | August 2016 - July 2017</h4>
                                       <ul>
                                         <li>Assist Kitchen Manager by overseeing daily order sheets, monthly inventory, training staff, and being a leader for staff.</li>
                                         <li>Prepare food according to store policy and State Food and Health regulations and make sure the rest of the staff is doing the same.</li>
