--- a/templated-urban/index.html
+++ b/templated-urban/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Urban <span>by TEMPLATED</span></a></div>
+				<!-- <div class="logo"><a href="index.html">Urban <span>by TEMPLATED</span></a></div> -->
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -23,8 +23,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Me</a></li>
-					<li><a href="generic.html">Resume</a></li>
-					<li><a href="elements.html">Projects</a></li>
+					<li><a href="resume.html">Resume</a></li>
+					<li><a href="projects.html">Projects</a></li>
 				</ul>
 			</nav>
 
@@ -32,7 +32,7 @@
 			<section id="banner">
 				<div class="inner">
 					<header>
-						<h1>This is Urban</h1>
+						<h1>Blake Burbach</h1>
 						<p>Aliquam libero augue varius non odio nec faucibus congue<br />felis quisque a diam rutrum tempus massa accumsan faucibus purus.</p>
 					</header>
 					<a href="#main" class="button big scrolly">Learn More</a>
@@ -49,7 +49,7 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="generic.html" class="link"><img src="images/Jules_and_Me.jpg" alt="" /></a>
 										</div>
 									</div>
 									<div class="col col2">
@@ -82,7 +82,7 @@
 					</section>
 
 				<!-- Section -->
-					<section class="wrapper style1">
+					<!-- <section class="wrapper style1">
 						<div class="inner">
 							<header class="align-center">
 								<h2>Aliquam ipsum purus dolor</h2>
@@ -112,19 +112,19 @@
 								</div>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 			</div>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<!-- <ul class="icons"> -->
+						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
-					</ul>
+						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li> -->
+					<!-- </ul> -->
 					<p>&copy; Untitled. All rights reserved. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.</p>
 				</div>
 			</footer>
