--- a/templated-urban/index.html
+++ b/templated-urban/index.html
@@ -32,10 +32,10 @@
 			<section id="banner">
 				<div class="inner">
 					<header>
-						<h1>Blake Burbach</h1>
-						<p>Aliquam libero augue varius non odio nec faucibus congue<br />felis quisque a diam rutrum tempus massa accumsan faucibus purus.</p>
+						<h1>Hey There!</h1>
+						<p>The name's Blake Burbach<br />And since you're here why don't I tell you a little bit about myself...</p>
 					</header>
-					<a href="#main" class="button big scrolly">Learn More</a>
+					<!-- <a href="#main" class="button big scrolly">Learn More</a> -->
 				</div>
 			</section>
 
@@ -49,7 +49,7 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/Jules_and_Me.jpg" alt="" /></a>
+											<a href="generic.html" class="link"><img src="images/Guitar_Playing.jpg" alt="Rocking out with my Jaguar" /></a>
 										</div>
 									</div>
 									<div class="col col2">
@@ -74,7 +74,7 @@
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="generic.html" class="link"><img src="images/Jules_and_Me.jpg" alt="Julia, Shoko, and me at sunset" /></a>
 									</div>
 								</div>
 							</div>
@@ -119,13 +119,13 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
-					<!-- <ul class="icons"> -->
-						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<ul class="icons">
+						<li><a href="https://github.com/BlakeBurbach" class="icon fa-github"><span class="label">GitHub</span></a></li>
+						<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li> -->
-					<!-- </ul> -->
-					<p>&copy; Untitled. All rights reserved. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.</p>
+					</ul>
+					<p>&copy; Blake's Landing Page. All rights reserved. Design: <a href="https://templated.co">TEMPLATED</a>.</p>
 				</div>
 			</footer>
 
