Added styling changes

--- a/templated-urban/index.html
+++ b/templated-urban/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://fonts.googleapis.com/css?family=Poppins:300" rel="stylesheet">
 	</head>
 	<body>
 
@@ -33,7 +34,7 @@
 				<div class="inner">
 					<header>
 						<h1>Hey There!</h1>
-						<p>The name's Blake Burbach<br />And since you're here why don't I tell you a little bit about myself...</p>
+						<p>The name's Blake Burbach<br />Since you're here why don't I tell you a little bit about myself...</p>
 					</header>
 					<!-- <a href="#main" class="button big scrolly">Learn More</a> -->
 				</div>
@@ -49,14 +50,14 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/Guitar_Playing.jpg" alt="Rocking out with my Jaguar" /></a>
+											<img src="images/Guitar_Playing.jpg" alt="Rocking out with my Jaguar" />
 										</div>
 									</div>
 									<div class="col col2">
 										<h3>Maecenas a gravida quam</h3>
 										<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
 										<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-										<a href="#" class="button">Learn More</a>
+										<!-- <a href="#" class="button">Learn More</a> -->
 									</div>
 								</div>
 						</div>
@@ -70,11 +71,11 @@
 									<h3>Suspendisse quis massa vel justo</h3>
 									<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
 									<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-									<a href="#" class="button">Learn More</a>
+									<!-- <a href="#" class="button">Learn More</a> -->
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/Jules_and_Me.jpg" alt="Julia, Shoko, and me at sunset" /></a>
+										<img src="images/Jules_and_Me.jpg" alt="Julia, Shoko, and me at sunset" />
 									</div>
 								</div>
 							</div>
@@ -121,8 +122,8 @@
 				<div class="copyright">
 					<ul class="icons">
 						<li><a href="https://github.com/BlakeBurbach" class="icon fa-github"><span class="label">GitHub</span></a></li>
-						<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.linkedin.com/in/blake-burbach/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li> -->
 					</ul>
 					<p>&copy; Blake's Landing Page. All rights reserved. Design: <a href="https://templated.co">TEMPLATED</a>.</p>
