--- a/templated-urban/index.html
+++ b/templated-urban/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Urban by TEMPLATED</title>
+		<title>Blake Burbach - Full Stack Software Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +24,7 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Me</a></li>
-					<li><a href="resume.html">Resume</a></li>
+					<li><a href="images/Blake_Resume.pdf">Resume</a></li>
 					<li><a href="projects.html">Projects</a></li>
 				</ul>
 			</nav>
@@ -33,8 +33,8 @@
 			<section id="banner">
 				<div class="inner">
 					<header>
-						<h1>Hey There!</h1>
-						<p>The name's Blake Burbach<br />Since you're here why don't I tell you a little bit about myself...</p>
+						<h1>Hey There!<br/>The name's Blake Burbach.<br /></h1>
+						<p>Since you're here why don't I tell you a little bit about myself.</p>
 					</header>
 					<!-- <a href="#main" class="button big scrolly">Learn More</a> -->
 				</div>
