Added a third section

--- a/templated-urban/index.html
+++ b/templated-urban/index.html
@@ -5,85 +5,123 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Blake Burbach - Full Stack Software Developer</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link href="https://fonts.googleapis.com/css?family=Poppins:300" rel="stylesheet">
-	</head>
-	<body>
 
-		<!-- Header -->
-			<header id="header" class="alt">
-				<!-- <div class="logo"><a href="index.html">Urban <span>by TEMPLATED</span></a></div> -->
-				<a href="#menu">Menu</a>
+<head>
+	<title>Blake Burbach - Full Stack Software Developer</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link href="https://fonts.googleapis.com/css?family=Poppins:300" rel="stylesheet">
+</head>
+
+<body>
+
+	<!-- Header -->
+	<header id="header" class="alt">
+		<!-- <div class="logo"><a href="index.html">Urban <span>by TEMPLATED</span></a></div> -->
+		<a href="#menu">Menu</a>
+	</header>
+
+	<!-- Nav -->
+	<nav id="menu">
+		<ul class="links">
+			<li>
+				<a href="index.html">Me</a>
+			</li>
+			<li>
+				<a href="images/Blake_Resume.pdf">Resume</a>
+			</li>
+			<li>
+				<a href="projects.html">Projects</a>
+			</li>
+		</ul>
+	</nav>
+
+	<!-- Banner -->
+	<section id="banner">
+		<div class="inner">
+			<header>
+				<h1>Hey There!
+					<br/>The name's Blake Burbach.
+					<br />
+				</h1>
+				<p>Since you're here, why don't I tell you a little bit about myself?</p>
 			</header>
+			<!-- <a href="#main" class="button big scrolly">Learn More</a> -->
+		</div>
+	</section>
 
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Me</a></li>
-					<li><a href="images/Blake_Resume.pdf">Resume</a></li>
-					<li><a href="projects.html">Projects</a></li>
-				</ul>
-			</nav>
-
-		<!-- Banner -->
-			<section id="banner">
-				<div class="inner">
-					<header>
-						<h1>Hey There!<br/>The name's Blake Burbach.<br /></h1>
-						<p>Since you're here why don't I tell you a little bit about myself.</p>
-					</header>
-					<!-- <a href="#main" class="button big scrolly">Learn More</a> -->
+	<!-- Main -->
+	<div id="main">
+		<!-- Section -->
+		<section class="wrapper style2">
+			<div class="inner">
+				<div class="flex flex-2">
+					<div class="col col2">
+						<h3>Full Stack Software Developer</h3>
+						<p>Technology has always been a part of my life, and my love for it has inspired me to pursue a career in software development.
+							Prime Digital Academy gave me the tools and knowledge to do just that. I now try to find ways to blend my love for artistic
+							 creation and logical thinking to build the future.</p>
+					</div>
+					<div class="col col1 first">
+						<div class="image round fit">
+							<img src="images/Blake_Headshot.png" alt="Professional Headshot of me" />
+						</div>
+					</div>
 				</div>
-			</section>
-
-		<!-- Main -->
-			<div id="main">
-
-				<!-- Section -->
-					<section class="wrapper style1">
-						<div class="inner">
-							<!-- 2 Columns -->
-								<div class="flex flex-2">
-									<div class="col col1">
-										<div class="image round fit">
-											<img src="images/Guitar_Playing.jpg" alt="Rocking out with my Jaguar" />
-										</div>
-									</div>
-									<div class="col col2">
-										<h3>Maecenas a gravida quam</h3>
-										<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-										<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-										<!-- <a href="#" class="button">Learn More</a> -->
-									</div>
-								</div>
+			</div>
+		</section>
+		<!-- Section -->
+		<section class="wrapper style1">
+			<div class="inner">
+				<!-- 2 Columns -->
+				<div class="flex flex-2">
+					<div class="col col1">
+						<div class="image round fit">
+							<img src="images/Guitar_Playing.jpg" alt="Rocking out with my Jaguar" />
 						</div>
-					</section>
+					</div>
+					<div class="col col2">
+						<h3>Musician</h3>
+						<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam
+							consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque
+							fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui,
+							non aliquet erat nibh non ex.</p>
+						<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim
+							magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam
+							ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
+						<!-- <a href="#" class="button">Learn More</a> -->
+					</div>
+				</div>
+			</div>
+		</section>
 
-				<!-- Section -->
-					<section class="wrapper style2">
-						<div class="inner">
-							<div class="flex flex-2">
-								<div class="col col2">
-									<h3>Suspendisse quis massa vel justo</h3>
-									<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-									<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-									<!-- <a href="#" class="button">Learn More</a> -->
-								</div>
-								<div class="col col1 first">
-									<div class="image round fit">
-										<img src="images/Jules_and_Me.jpg" alt="Julia, Shoko, and me at sunset" />
-									</div>
-								</div>
-							</div>
+		<!-- Section -->
+		<section class="wrapper style2">
+			<div class="inner">
+				<div class="flex flex-2">
+					<div class="col col2">
+						<h3>Suspendisse quis massa vel justo</h3>
+						<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam
+							consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque
+							fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui,
+							non aliquet erat nibh non ex.</p>
+						<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim
+							magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam
+							ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
+						<!-- <a href="#" class="button">Learn More</a> -->
+					</div>
+					<div class="col col1 first">
+						<div class="image round fit">
+							<img src="images/Jules_and_Me.jpg" alt="Julia, Shoko, and me at sunset" />
 						</div>
-					</section>
+					</div>
+				</div>
+			</div>
+		</section>
 
-				<!-- Section -->
-					<!-- <section class="wrapper style1">
+		<!-- Section -->
+		<!-- <section class="wrapper style1">
 						<div class="inner">
 							<header class="align-center">
 								<h2>Aliquam ipsum purus dolor</h2>
@@ -115,28 +153,38 @@
 						</div>
 					</section> -->
 
-			</div>
+	</div>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="copyright">
-					<ul class="icons">
-						<li><a href="https://github.com/BlakeBurbach" class="icon fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="https://www.linkedin.com/in/blake-burbach/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="copyright">
+			<ul class="icons">
+				<li>
+					<a href="https://github.com/BlakeBurbach" class="icon fa-github">
+						<span class="label">GitHub</span>
+					</a>
+				</li>
+				<li>
+					<a href="https://www.linkedin.com/in/blake-burbach/" class="icon fa-linkedin">
+						<span class="label">LinkedIn</span>
+					</a>
+				</li>
+				<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li> -->
-					</ul>
-					<p>&copy; Blake's Landing Page. All rights reserved. Design: <a href="https://templated.co">TEMPLATED</a>.</p>
-				</div>
-			</footer>
+			</ul>
+			<p>&copy; Blake's Landing Page. All rights reserved. Design:
+				<a href="https://templated.co">TEMPLATED</a>.</p>
+		</div>
+	</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
