added final text, links open in new tabs

--- a/templated-urban/index.html
+++ b/templated-urban/index.html
@@ -31,9 +31,9 @@
 			<li>
 				<a href="images/Blake_Resume.pdf">Resume</a>
 			</li>
-			<li>
+			<!-- <li>
 				<a href="projects.html">Projects</a>
-			</li>
+			</li> -->
 		</ul>
 	</nav>
 
@@ -47,7 +47,6 @@
 				</h1>
 				<p>Since you're here, why don't I tell you a little bit about myself?</p>
 			</header>
-			<!-- <a href="#main" class="button big scrolly">Learn More</a> -->
 		</div>
 	</section>
 
@@ -59,9 +58,12 @@
 				<div class="flex flex-2">
 					<div class="col col2">
 						<h3>Full Stack Software Developer</h3>
-						<p>Technology has always been a part of my life, and my love for it has inspired me to pursue a career in software development.
-							Prime Digital Academy gave me the tools and knowledge to do just that. I now try to find ways to blend my love for artistic
-							 creation and logical thinking to build the future.</p>
+						<div class="newText">
+							<p>Technology has always been a part of my life, and my fascination with it has inspired me to pursue a career in software development.
+								Prime Digital Academy gave me the tools and knowledge to do just that. I now try to find ways to blend my love for artistic
+								 creation and logical thinking to build the future.</p>
+							<p>Feel free to head on over to my <a id="textLink" href="https://github.com/BlakeBurbach" target="_blank">GitHub</a> to see the projects I've been working on.</p>
+						</div>
 					</div>
 					<div class="col col1 first">
 						<div class="image round fit">
@@ -78,19 +80,19 @@
 				<div class="flex flex-2">
 					<div class="col col1">
 						<div class="image round fit">
-							<img src="images/Guitar_Playing.jpg" alt="Rocking out with my Jaguar" />
+							<img src="images/Guitar_Playing.jpg" alt="Me and my Jag" />
 						</div>
 					</div>
 					<div class="col col2">
 						<h3>Musician</h3>
-						<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam
-							consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque
-							fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui,
-							non aliquet erat nibh non ex.</p>
-						<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim
-							magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam
-							ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-						<!-- <a href="#" class="button">Learn More</a> -->
+						<div class="newText">
+							<p>I found my passion for creation through music.
+								When I was thirteen, my uncle gave me my first guitar and I drove my family insane teaching myself how to play.
+								Since then, I've been in a number of bands, made some killer and not so killer records both as a musician and a recording engineer,
+								and toured the country. Through it all, I've gained a deep sense of what it truly means to create art. It's both beautiful and ugly
+								and I wouldn't know what to do without it. 
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -101,15 +103,19 @@
 			<div class="inner">
 				<div class="flex flex-2">
 					<div class="col col2">
-						<h3>Suspendisse quis massa vel justo</h3>
-						<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam
-							consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque
-							fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui,
-							non aliquet erat nibh non ex.</p>
-						<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim
-							magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam
-							ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-						<!-- <a href="#" class="button">Learn More</a> -->
+						<h3>Just Life Things</h3>
+						<div class="newText">
+						<p>When I'm not in the code or making music, you can find me in the garden with my partner, Julia.
+							She's taught me the value in the restorative nature of getting dirty with garden building and maintenance. 
+							When we're not gardening, we like to go hiking and backpacking with our Shikoku, Shoko. 
+							Other than that, I'm probably playing some video games. ¯\_(ツ)_/¯
+						</p>
+						<p>
+							As you can see, I'm a pretty cool guy. Want to collaborate in the future? Have a conversation over coffee?
+							Hit me up on <a id="textLinkedIn" href="https://www.linkedin.com/in/blake-burbach/" target="_blank">LinkedIn</a> 
+							or shoot me an <a id="mailTime" href="mailto:cras.bburbach@gmail.com">email</a>. 
+						</p>
+						</div>
 					</div>
 					<div class="col col1 first">
 						<div class="image round fit">
@@ -119,40 +125,6 @@
 				</div>
 			</div>
 		</section>
-
-		<!-- Section -->
-		<!-- <section class="wrapper style1">
-						<div class="inner">
-							<header class="align-center">
-								<h2>Aliquam ipsum purus dolor</h2>
-								<p>Cras sagittis turpis sit amet est tempus, sit amet consectetur purus tincidunt.</p>
-							</header>
-							<div class="flex flex-3">
-								<div class="col align-center">
-									<div class="image round fit">
-										<img src="images/pic03.jpg" alt="" />
-									</div>
-									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
-								</div>
-								<div class="col align-center">
-									<div class="image round fit">
-										<img src="images/pic05.jpg" alt="" />
-									</div>
-									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
-								</div>
-								<div class="col align-center">
-									<div class="image round fit">
-										<img src="images/pic04.jpg" alt="" />
-									</div>
-									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
-								</div>
-							</div>
-						</div>
-					</section> -->
-
 	</div>
 
 	<!-- Footer -->
@@ -169,8 +141,6 @@
 						<span class="label">LinkedIn</span>
 					</a>
 				</li>
-				<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li> -->
 			</ul>
 			<p>&copy; Blake's Landing Page. All rights reserved. Design:
 				<a href="https://templated.co">TEMPLATED</a>.</p>
