--- a/templated-urban/projects.html
+++ b/templated-urban/projects.html
@@ -15,16 +15,15 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="index.html">Urban <span>by TEMPLATED</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="index.html">Me</a></li>
+					<li><a href="resume.html">Resume</a></li>
+					<li><a href="projects.html">Projects</a></li>
 				</ul>
 			</nav>
 
