--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<a href="index.html">Me</a>
 			</li>
 			<li>
-				<a href="images/Blake_Resume.pdf">Resume</a>
+				<a href="images/Blake_Burbach_Resume.pdf">Resume</a>
 			</li>
 			<!-- <li>
 				<a href="projects.html">Projects</a>
